CommercialApp/objects/Geography__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Key__c</fullName>
        <label>Geography Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Level__c</fullName>
        <label>Geography Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Name_Display__c</fullName>
        <label>Geography Name Display</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Name__c</fullName>
        <label>Geography Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level1_Parent_Geography_Key__c</fullName>
        <label>Level1 Parent Geography Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level1_Parent_Geography_Name_Display__c</fullName>
        <label>Level1 Parent Geography Name Display</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level1_Parent_Geography_Name__c</fullName>
        <label>Level1 Parent Geography Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level2_Parent_Geography_Key__c</fullName>
        <label>Level2 Parent Geography Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level2_Parent_Geography_Name_Display__c</fullName>
        <label>Level2 Parent Geography Name Display</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level2_Parent_Geography_Name__c</fullName>
        <label>Level2 Parent Geography Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level3_Parent_Geography_Key__c</fullName>
        <label>Level3 Parent Geography Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level3_Parent_Geography_Name_Display__c</fullName>
        <label>Level3 Parent Geography Name Display</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level3_Parent_Geography_Name__c</fullName>
        <label>Level3 Parent Geography Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <label>Market Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Key__c</fullName>
        <label>Product Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Cycle_Date__c</fullName>
        <label>Report Cycle Date</label>
        <type>Date</type>
    </fields>
    <label>Geography</label>
    <nameField>
        <label>Geo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>